# starting-ragchatbot-codebase

./: claude.local.md  pyproject.toml
.trees/quality_feature/: CLAUDE.md  frontend-changes.md
.trees/quality_feature/backend/: ai_generator.py
.trees/quality_feature/backend/tests/: conftest.py
.trees/quality_feature/frontend/: index.html  script.js  style.css
.trees/testing_feature/: pyproject.toml
.trees/testing_feature/backend/: app.py  search_tools.py
.trees/testing_feature/backend/tests/: test_api_endpoints.py  test_document_processor.py
.trees/ui_feature/: CLAUDE.md
.trees/ui_feature/backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
.trees/ui_feature/backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_integration.py  test_course_search_tool.py  test_document_processor.py  test_rag_system.py  test_vector_store.py
.trees/ui_feature/scripts/: format.sh  lint.sh  quality.sh  test.sh
backend/: rag_system.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_integration.py  test_course_search_tool.py  test_rag_system.py
frontend/: script.js  style.css
